# swagger.json
@@ -1,45 +1,19 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "version": "1.0.0",
-    "title": "Authentication Api",
-    "license": {
-      "name": "Employee Registartion API"
-    }
+    "title": "Sample API",
+    "description": "Employee Registration API",
+    "version": "0.1.9"
   },
   "servers": [
     {
-      "url": "http://localhost:3000"
-    }
-  ],
-  "schemes": ["http", "https"],
-  "produces": ["application/json"],
-  "securityDefinitions": {
-    "APIKeyHeader": {
-      "type": "apiKey",
-      "in": "header",
-      "name": "Authorization"
-    }    
-  },
-  "components": {
-    "securitySchemes": {
-      "bearerAuth": {
-        "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
-      }
-    }
-  },
-  "security": [
-    {
-      "APIKeyHeader": []
+      "url": "http://localhost:3000/"
     }
   ],
   "paths": {
     "/Register": {
       "post": {
         "summary": "Employee Register",
-        "tags": ["Employee"],
         "description": "OK (successfully register)",
         "parameters": [
           {
@@ -151,144 +125,13 @@
         }
       }
     },
-    "/employee_update": {
-      "put": {
-        "summary": "Employee Register",
-
-        "tags": ["Employee"],
-
-        "description": "Employee Registration",
-
-        "parameters": [
-          {
-            "name": "Employee Registration",
-
-            "in": "body",
-
-            "description": "Employee Registration",
-
-            "schema": {
-              "properties": {
-                "name": {
-                  "type": "string"
-                },
-
-                "phoneno": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "403": {
-            "description": "Access Denied"
-          },
-
-          "404": {
-            "description": "please login again!"
-          },
-
-          "401": {
-            "description": "This student already exists"
-          },
-
-          "200": {
-            "description": "Login Success"
-          },
-
-          "500": {
-            "description": "Something went wrong"
-          }
-        }
-      }
-    },
-    "/reset_password": {
-      "put": {
-        "summary": "Employee Register",
-
-        "tags": ["Employee"],
-
-        "description": "Employee Registration",
-
-        "parameters": [
-          {
-            "name": "Employee Registration",
-
-            "in": "body",
-
-            "description": "Employee Registration",
-
-            "schema": {
-              "properties": {
-                "oldpwd": {
-                  "type": "string"
-                },
-
-                "newpwd": {
-                  "type": "string"
-                },
-
-                "confirmpwd": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "403": {
-            "description": "Access Denied"
-          },
-
-          "404": {
-            "description": "please login again!"
-          },
-
-          "401": {
-            "description": "This student already exists"
-          },
-
-          "200": {
-            "description": "Login Success"
-          },
-
-          "500": {
-            "description": "Something went wrong"
-          }
-        }
-      }
-    },
     "/EmployeeDetails": {
       "get": {
-        "summary": "get all user",
-        "tags": ["User"],
-        "description": "get all user",
-        "parameters": [],
-        "responses": {
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "success"
-          },
-          "401": {
-            "description": "This user already exists"
-          },
-          "200": {
-            "description": " User Login Success"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          },
-          "505": {
-            "description": "HTTP Version Not Support"
+        "security": [
+          {
+            "- basicAuth": []
           }
-        }
-      }
-    },
-    "/EmpBday": {
-      "get": {
+        ],
         "summary": "get all user",
         "tags": ["User"],
         "description": "get all user",
